[tool.poetry]
name = "bleak-fsm"
version = "0.2.0"
description = "A Finite State Machine abstraction over the Bleak Bluetooth library for simplified state management in production Python applications."
authors = ["tensorturtle <tensorturtle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bleak_fsm"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
bleak = "^0.21.1"
transitions = "^0.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5.post1"
pytest-mock = "^3.12.0"
pycycling = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
